# recruitment-support

./: .gitignore  README.md  pyproject.toml
configs/: position_map.yaml  roles_v1.yaml  v1.yaml  v2.yaml
notebooks/: 00_validate_fbref_access.ipynb
scripts/: build_comparables.py  build_marts.py  build_percentiles.py  build_shortlist.py  run_pipeline.py
src/rsfbref/: config.py
src/rsfbref/analytics/: comparables.py  roles.py  shortlist.py
src/rsfbref/export/: tableau.py
src/rsfbref/features/: percentiles.py  scopes.py
src/rsfbref/io/: fbref_reader.py
src/rsfbref/marts/: build_dims.py  build_facts.py
src/rsfbref/transform/: clean_player_season.py  flatten.py  player_season.py  position_bucket.py
tests/: test_roles.py
